# subdog

./: README.md  errors.py  faq.md  how_it_works.md  main.py  pyproject.toml  rate_limit_examples.py  resolved_subdomains.json  test.py
tests/: test_semaphore_explainer.py
theory/: README.md  modern_web_routing.md  rate_limit_theory.md
tmp/: 99-3521  99-3521-prompt  99-4051-prompt  99-536  99-536-prompt  99-6236  99-6236-prompt
